Add hyperlinks to the endpoints

--- a/app/info.html
+++ b/app/info.html
@@ -41,27 +41,27 @@
             <h2>Endpoints</h2>
                 <table>
                     <tr>
-                        <td><code>/</code></td>
+                        <td><code><a href="/">/</a></code></td>
+                        <td>The root of the directory, which displays all the key information and details about the project, including: Overview, Endpoints, Model Info and More Info.</td>
+                    </tr>
+                    <tr>
+                        <td><code><a href="/docs">/docs/</a></code></td>
                         <td>Description</td>
                     </tr>
                     <tr>
-                        <td><code>/docs/</code></td>
+                        <td><code><a href="/health">/health/</a></code></td>
                         <td>Description</td>
                     </tr>
                     <tr>
-                        <td><code>/health/</code></td>
+                        <td><code><a href="/beer/type">/beer/type/</a></code></td>
                         <td>Description</td>
                     </tr>
                     <tr>
-                        <td><code>/beer/type/</code></td>
+                        <td><code><a href="/beers/type">/beers/type/</a></code></td>
                         <td>Description</td>
                     </tr>
                     <tr>
-                        <td><code>/beers/type/</code></td>
-                        <td>Description</td>
-                    </tr>
-                    <tr>
-                        <td><code>/model/architecture/</code></td>
+                        <td><code><a href="/model/architecture">/model/architecture/</a></code></td>
                         <td>Description</td>
                     </tr>
                 </table>
